--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <h1 class="project-name">Kyle Wei</h1>
         <h2 class="project-tagline">Student</h2>
       </section>
+      
+      <p> I am a Computer Science major from Plano, TX. </p>
 
       <section class="main-content">
         <h3>Education</h3>
