--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
       <footer class="site-footer">
         <hr>
         <p>footer stuff goes here</p>
+        
+        <a href="default.asp">
+        <img src="smiley.gif" alt="Facebook" style="width:42px;height:42px;border:0;">
+        </a> 
+        <a href="default.asp">
+        <img src="smiley.gif" alt="Instagram" style="width:42px;height:42px;border:0;">
+        </a> 
       </footer>
 
     </div>
