--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <hr>
         <p>footer stuff goes here</p>
         
-        <a href="default.asp">
+        <a href="http://www.facebook.com/kylewei17">
         <img src="smiley.gif" alt="Facebook" style="width:42px;height:42px;border:0;">
         </a> 
-        <a href="default.asp">
+        <a href="https://www.instagram.com/kyle.wei/">
         <img src="smiley.gif" alt="Instagram" style="width:42px;height:42px;border:0;">
         </a> 
       </footer>
