--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
         
         <a href="http://www.facebook.com/kylewei17">
         <img src="smiley.gif" alt="Facebook" style="width:42px;height:42px;border:0;">
-        </a> 
-        <a href="https://www.instagram.com/kyle.wei/">
-        <img src="smiley.gif" alt="Instagram" style="width:42px;height:42px;border:0;">
-        </a> 
+        src="https://c866088.ssl.cf3.rackcdn.com/assets/twiiter40x40.png" border=0></a>
+        </a>
+        
+        <a target="_blank" title="follow me on instagram" 
+        href="http://www.instagram.com/kyle.wei"> <img alt="Instagram" 
+          src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram40x40.png" border=0></a>
       </footer>
 
     </div>
