--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
         <hr>
         <p>footer stuff goes here</p>
         
-        <a href="http://www.facebook.com/kylewei17">
-        <img src="smiley.gif" alt="Facebook" style="width:42px;height:42px;border:0;">
-        src="https://c866088.ssl.cf3.rackcdn.com/assets/twiiter40x40.png" border=0></a>
-        </a>
+        <a target="_blank" title="facebook" 
+        href="http://www.facebook.com/kylewei17"><img alt="Facebook" 
+        src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook40x40.png" border=0></a>
         
-        <a target="_blank" title="follow me on instagram" 
+        <a target="_blank" title="instagram" 
         href="http://www.instagram.com/kyle.wei"> <img alt="Instagram" 
           src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram40x40.png" border=0></a>
       </footer>
