--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <section class="page-header">
         <h1 class="project-name">Kyle Wei</h1>
         <h2 class="project-tagline">Student</h2>
-        <p> I am a Computer Science major from Plano, TX. </p>
+        <p> I am a Computer Science major at Washington University in St. Louis. </p>
+        <p> I am from Plano, Texas and I am the youngest of three children. </p>
       </section>
       
       
