--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <section class="page-header">
         <h1 class="project-name">Kyle Wei</h1>
         <h2 class="project-tagline">Student</h2>
+        
+        <p><b>Born: </b>September 28, 1992 <br><b>Email: </b> weikyle@wustl.edu</br></p>
         <p> I am a Computer Science major at Washington University in St. Louis. </p>
         <p> I am from Plano, Texas and I am the youngest of three children. </p>
       </section>
@@ -34,7 +36,6 @@
 
       <footer class="site-footer">
         <hr>
-        <p>footer stuff goes here</p>
         
         <center>
         <a target="_blank" title="Facebook" 
