--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <h2 class="project-tagline">Student</h2>
         
         <p><b>Born: </b>September 28, 1992 <br><b>Email: </b> weikyle@wustl.edu</br></p>
-        <p><i> I am a Computer Science major at Washington University in St. Louis.  
+        <p><i> I am a Computer Science major at Washington University in St. Louis. 
+        My focus is primarily Computer Networking, and I have worked at Cisco Systems the past two summers. 
         <br>I am from Plano, Texas and I am the youngest of three children. </br> </i> </p>
       </section>
       
