--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <p><b>Born: </b>September 28, 1992 <br><b>Email: </b> weikyle@wustl.edu</br></p>
         <p><i> I am a Computer Science major at Washington University in St. Louis. 
-        My focus is primarily Computer Networking, and I have worked at Cisco Systems the past two summers.  </i> </p>
+        My focus is primarily Computer Networking, and I have worked at Cisco Systems in San Jose, California the past two summers.  </i> </p>
         <p><i>I am from Plano, Texas and I am the youngest of three children. </i></p>
       </section>
       
