--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section class="main-content">
         <h3>Interests</h3>
         <hr>
-        <p>In my free time, one of my main interests include hiking. I am in the progress of hiking through all 59 National Parks
+        <p>In my free time, hiking is one of my main interests. I am in the progress of hiking through all 59 National Parks
         in the country. In the past two years, I have visited the following National Parks: </p>
         <ul>
           <li><a href="http://www.nps.gov/grca/index.htm">Grand Canyon</a></li>
