--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         <p>In my free time, hiking is one of my main interests. I am in the progress of hiking through all 59 National Parks
         in the country. In the past two years, I have visited the following National Parks: </p>
         <ul>
-          <li><a href="http://www.nps.gov/grca/index.htm">Grand Canyon</a> | NV </li>
-          <li><a href="http://www.nps.gov/yell/index.htm">Yellowstone</a></li>
-          <li><a href="http://www.nps.gov/bibe/index.htm">Big Bend</a></li>
-          <li><a href="http://www.nps.gov/yose/index.htm">Yosemite</a></li>
-          <li><a href="http://www.nps.gov/grsm/index.htm">Great Smoky Mountains</a></li>
-          <li><a href="http://www.nps.gov/zion/index.htm">Zion</a></li>
-          <li><a href="http://www.nps.gov/brca/index.htm">Bryce Canyon</a></li>
-          <li><a href="http://www.nps.gov/romo/index.htm">Rocky Mountain</a></li>
-          <li><a href="http://www.nps.gov/grsa/index.htm">Great Sand Dunes</a></li>
+          <li><a href="http://www.nps.gov/grca/index.htm">Grand Canyon</a> | <i>AZ</i> </li>
+          <li><a href="http://www.nps.gov/yell/index.htm">Yellowstone</a> | <i>ID, MT, WY</i></li>
+          <li><a href="http://www.nps.gov/bibe/index.htm">Big Bend</a> | <i>TX</i></li>
+          <li><a href="http://www.nps.gov/yose/index.htm">Yosemite</a> | <i>CA</i></li>
+          <li><a href="http://www.nps.gov/grsm/index.htm">Great Smoky Mountains</a>| <i>NC, TN</i></li>
+          <li><a href="http://www.nps.gov/zion/index.htm">Zion</a> | <i>UT</i></li>
+          <li><a href="http://www.nps.gov/brca/index.htm">Bryce Canyon</a> | <i>UT</i></li>
+          <li><a href="http://www.nps.gov/romo/index.htm">Rocky Mountain</a> | <i>CO</i></li>
+          <li><a href="http://www.nps.gov/grsa/index.htm">Great Sand Dunes</a> | <i>CO</i></li>
         </ul>
       </section>
 
