--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook40x40.png" border=0></a>
         
         <a target="_blank" title="Instagram" 
-        href="http://www.instagram.com/kyle.wei"> <img alt="Instagram" 
+        href="http://www.instagram.com/kylie.wee"> <img alt="Instagram" 
         src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram40x40.png" border=0></a>
           
         <a target="_blank" title="Twitter" 
